--- a/_static/cloud_eaw.css
+++ b/_static/cloud_eaw.css
@@ -2,6 +2,7 @@
 
 div.document {
   margin: 0 0;
+  max-width: 1440px;
 }
 
 div.section {
@@ -9,7 +10,7 @@ div.section {
 }
 
 .body>.section {
-  padding: 10px;
+  padding: 30px;
 }
 
 div.sphinxsidebar {
